--- a/dbc/templates/form.html
+++ b/dbc/templates/form.html
@@ -170,7 +170,7 @@ label.light {
             {% endfor %}
         </ul>
         {% endif %}
-        <a href="/form/display" class="btn btn-primary d-flex justify-content-center" type="submit">Show Data</a>
+        <a href="/display" class="btn btn-primary d-flex justify-content-center" type="submit">Show Data</a>
        </form>
         </div>
       </div>
